# Ummm

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  Pipfile  package.json  pyproject.toml
Assets/Inputs/: PlayerInputs.inputactions  PlayerInputsTwo.inputactions
Assets/Materials/: TouchableMaterial.mat
Assets/Scenes/: Landing.unity  One.unity  Two.unity
Assets/ScriptableObjects/: DatasetObject.cs
Assets/Scripts/: BuildToolExample.cs  Builder.cs  CameraController.cs  Dataset.cs  DigitImage.cs  GameManager.cs  Git.cs  MnistReader.cs  MultithreadExample.cs  NeuralNetwork.cs  NeuralNetworkManager.cs  NextNetManager.cs  PlayerController.cs  PlayerControllerTwo.cs  PredictExample.cs  ProcessExtensions.cs  RegisterStringLogSideChannel.cs  StringLogSideChannel.cs  UmmmDataset.cs  UmmmExtensions.cs
ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
ummm/: backup.py  main.py
