[tool.poetry]
name = "ummm"
version = "0.1.0"
description = ""
authors = ["Luke Underwood <veryveryeasily@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mlagents = "^0.23.0"
mlagents_envs = "^0.23.0"
torch = "^1.7.1"
scikit-learn = "^0.24.1"
matplotlib = "^3.3.4"

[tool.poetry.dev-dependencies]
ipython = "^7.19.0"
pylint = "^2.6.0"
black = {version = "^20.8b1", allow-prereleases = true}
pdbpp = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
